--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   flutter_svg: ^2.0.9 # help us to use SVG in our app
   provider: ^6.1.1 # for State management
   http: ^1.2.0
+  firebase_core: 
+  cloud_firestore: 
+  firebase_auth:
+
   
 
 dev_dependencies:
