--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: shop_app
+name: alqua_online
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -40,10 +40,12 @@ dependencies:
   firebase_core: 
   cloud_firestore: 
   firebase_auth:
+  change_app_package_name: ^1.1.0
 
   
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
 
@@ -58,6 +60,12 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/alqua-applogo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
