--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_firestore: 
   firebase_auth:
   change_app_package_name: ^1.1.0
+  lottie: ^3.1.0
+  share_plus: ^7.2.2
 
   
 
@@ -75,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/animation/
     - assets/icons/
   fonts:
     - family: Muli
