--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,14 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+
+def keystoreProperties = new Properties()   
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
+
 android {
     namespace "online.alqua.app"
     compileSdkVersion flutter.compileSdkVersion
@@ -51,13 +59,19 @@ android {
         versionName flutterVersionName
         multiDexEnabled true
     }
+     signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   } 
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
-        }
+           signingConfig signingConfigs.release
+       }
     }
 }
 
@@ -67,5 +81,7 @@ flutter {
 
 dependencies {
         // implementation 'com.android.support:multidex:1.0.3'
+          implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
+
 
 }
