--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,11 @@ dependencies:
   http: ^1.2.0
   firebase_core: 
   cloud_firestore: 
-  firebase_auth:
+  firebase_auth: ^4.17.8
   change_app_package_name: ^1.1.0
   lottie: ^3.1.0
   share_plus: ^7.2.2
-  firebase_app_check: ^0.2.1+17
+  shake_flutter: ^16.2.1
 
   
 
